New files added - [] Files modified - [UserCreation.html] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/UserCreation/UserCreation.html
+++ b/src/main/webapp/pages/UserCreation/UserCreation.html
@@ -94,7 +94,7 @@
                                                 </wm-gridrow>
                                                 <wm-gridrow name="gridrow18_1">
                                                     <wm-gridcolumn columnwidth="8" name="gridcolumn27_1">
-                                                        <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.MunicpalitiesList.dataSet[$i].state"></wm-label>
+                                                        <wm-label padding="unset 0.5em" name="label12" caption="bind:Variables.MunicpalitiesList.dataSet[$i].states.stateName"></wm-label>
                                                     </wm-gridcolumn>
                                                     <wm-gridcolumn columnwidth="4" name="gridcolumn32"></wm-gridcolumn>
                                                 </wm-gridrow>
