--- a/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
+++ b/src/main/webapp/pages/ManageMunicipalities/ManageMunicipalities.html
@@ -118,7 +118,8 @@
                                     </wm-gridrow>
                                     <wm-gridrow name="gridrow4">
                                         <wm-gridcolumn name="gridcolumn7" columnwidth="6">
-                                            <wm-form-field name="timeZone" displayname="Time Zone" show="true" primary-key="false" generator="assigned" key="timeZone" type="string" widget="text" maxchars="255" inputtype="text" placeholder="Enter value"></wm-form-field>
+                                            <wm-form-field name="timeZone" displayname="Time Zone" show="true" primary-key="false" generator="assigned" key="timeZone" type="string" widget="select" maxchars="255" inputtype="text" placeholder="Enter value"
+                                            dataset="EST, CST, MST, PST" defaultvalue="EST"></wm-form-field>
                                         </wm-gridcolumn>
                                         <wm-gridcolumn name="gridcolumn8" columnwidth="6">
                                             <wm-form-field name="openTime" displayname="Open Time" show="true" primary-key="false" generator="assigned" key="openTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
@@ -128,12 +129,10 @@
                                         <wm-gridcolumn name="gridcolumn9" columnwidth="6">
                                             <wm-form-field name="closeTime" displayname="Close Time" show="true" primary-key="false" generator="assigned" key="closeTime" type="time" widget="time" placeholder="Select time" outputformat="HH:mm:ss"></wm-form-field>
                                         </wm-gridcolumn>
-                                        <wm-gridcolumn name="gridcolumn1" columnwidth="6">
-                                            <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="false" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID"
-                                            disabled="true"></wm-form-field>
-                                        </wm-gridcolumn>
                                     </wm-gridrow>
                                 </wm-layoutgrid>
+                                <wm-form-field name="municipalityGuid" displayname="Municipality Guid" show="false" primary-key="false" generator="assigned" key="municipalityGuid" type="string" widget="text" maxchars="255" defaultvalue="bind:GUID" disabled="true"
+                                inputtype="text" placeholder="Enter value"></wm-form-field>
                                 <wm-form-action key="cancel" display-name="Cancel" show="true" class="form-cancel btn-secondary" iconclass="wi wi-cancel" title="Cancel" action="cancel()" disabled="false" type="button" update-mode="true"></wm-form-action>
                                 <wm-form-action key="save" display-name="Save" show="true" class="form-save btn-success" iconclass="wi wi-save" title="Save" disabled="false" type="submit" update-mode="true"></wm-form-action>
                             </wm-liveform>
