--- a/src/main/webapp/pages/Main/Main.html
+++ b/src/main/webapp/pages/Main/Main.html
@@ -2,7 +2,7 @@
     <wm-header content="header" name="header" height="auto"></wm-header>
     <wm-top-nav name="topnav" content="topnav"></wm-top-nav>
     <wm-content name="content">
-        <wm-left-panel columnwidth="2" name="leftpanel" content="leftnav" animation="slide-over"></wm-left-panel>
+        <wm-left-panel columnwidth="2" name="leftpanel" animation="slide-over" content="leftnav"></wm-left-panel>
         <wm-page-content columnwidth="10" name="mainContent" padding="unset 15px">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow1">
