--- a/src/main/webapp/pages/leftnav/leftnav.html
+++ b/src/main/webapp/pages/leftnav/leftnav.html
@@ -10,7 +10,7 @@
             <wm-anchor caption="Administration" name="inventoryLink" iconclass="wi wi-control-point" on-click="Variables.goToPage_MunicipalityAdministration.invoke()" accessroles="MunicipalityAdmin,CXAdmin"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="list_support">
-            <wm-anchor caption="New Form" name="supportLink" iconclass="wi wi-playlist-add" accessroles="User,MunicipalityAdmin"></wm-anchor>
+            <wm-anchor caption="New Form" name="supportLink" iconclass="wi wi-playlist-add" accessroles="User,MunicipalityAdmin" on-click="supportLinkClick($event, $scope)"></wm-anchor>
         </wm-nav-item>
         <wm-nav-item name="nav_item5">
             <wm-anchor name="anchor15" iconclass="wi wi-work" caption="My Company" on-click="Variables.goToPage_MyCompany.invoke()" accessroles="CXVendorAdmin,CXAdmin" badgevalue="bind:Variables.MyCompaniesCount.dataSet.dataValue"></wm-anchor>
