New files added - [] Files modified - [ManageForms.html,EditForm.html,EditForm.variables.json] Refactored files - [] Fixed bugs - [] Removed files - []

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -22,7 +22,7 @@
                                                 <wm-panel iconclass="wi wi-info-outline" name="panelFormInfo" title="Form Info" class="panel-info">
                                                     <wm-gridrow name="gridrow3">
                                                         <wm-gridcolumn columnwidth="6" name="gridcolumn3">
-                                                            <wm-form-field name="formTypeGuid" displayname="Form Type Guid" show="true" primary-key="false" generator="assigned" key="formTypeGuid" type="string" widget="text" maxchars="255" inputtype="text"
+                                                            <wm-form-field name="formTypeGuid" displayname="Form Type Guid" show="false" primary-key="false" generator="assigned" key="formTypeGuid" type="string" widget="text" maxchars="255" inputtype="text"
                                                             placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.firstRecord.formTypeGuid" readonly="true"></wm-form-field>
                                                         </wm-gridcolumn>
                                                         <wm-gridcolumn columnwidth="6" name="gridcolumn4">
